test/corpus/godoc.txt
==================
Simple function
==================

func Bool(v bool) *bool

---

(document
  (func_line))

==================
Simple type
==================

type Message interface{}

---

(document
  (type_line))

==================
Function with interface{} parameter
==================

func Assert(t TestingT, comparison BoolOrComparison, msgAndArgs ...interface{})

---

(document
  (func_line))

==================
Function with multiple interface{} parameters
==================

func Process(data interface{}, callback interface{}) error

---

(document
  (func_line))

==================
Section header
==================

FUNCTIONS

---

(document
  (section_header))

==================
Package header
==================

package proto // import "google.golang.org/protobuf/proto"

---

(document
  (package_line))

==================
Variable declaration
==================

var ErrNoSync = errors.New("no sync")

---

(document
  (var_line))

==================
Constant declaration
==================

const MaxInt = 9223372036854775807

---

(document
  (const_line))

==================
Multiple items
==================

package fmt // import "fmt"

FUNCTIONS

func Printf(format string, a ...any) (n int, err error)

---

(document
  (package_line)
  (section_header)
  (func_line))

==================
Complete godoc output
==================

package proto // import "google.golang.org/protobuf/proto"

Package proto provides functions operating on protocol buffers.

FUNCTIONS

func Bool(v bool) *bool
    Bool stores v in a new bool value and returns a pointer to it.

func Marshal(m Message) ([]byte, error)
    Marshal returns the wire-format encoding of m.

TYPES

type Message = protoreflect.ProtoMessage
    Message is the top-level interface that all messages must implement.

---

(document
  (package_line)
  (text_line)
  (section_header)
  (func_line)
  (text_line)
  (func_line)
  (text_line)
  (section_header)
  (type_line)
  (text_line))

==================
Constant block
==================

const (
    MaxInt = 9223372036854775807
    MinInt = -9223372036854775808
)

---

(document
  (const_block))

==================
Variable block
==================

var (
    ErrNoSync = errors.New("no sync")
    ErrTimeout = errors.New("timeout")
)

---

(document
  (var_block))

==================
Type struct block
==================

type Config struct {
    Name string
    Port int
}

---

(document
  (type_block))

==================
Function block
==================

func ExampleFunc() {
    fmt.Println("hello")
    return
}

---

(document
  (func_block))

==================
Function block with receiver
==================

func (s *Server) HandleRequest(req Request) {
    s.process(req)
}

---

(document
  (func_block))

==================
Function block with return values
==================

func Calculate(a, b int) (int, error) {
    result := a + b
    return result, nil
}

---

(document
  (func_block))

==================
Empty function block
==================

func NoOp() {
}

---

(document
  (func_block))

==================
Indented prose after declaration (not a code block)
==================

func CanonicalMIMEHeaderKey(s string) string
    CanonicalMIMEHeaderKey returns the canonical format of the MIME header key
    s. The canonicalization converts the first letter and any letter following
    a hyphen to upper case; the rest are converted to lowercase.

---

(document
  (func_line)
  (text_line)
  (text_line)
  (text_line))

==================
Code block starting with method call
==================

Example usage:

    client.Connect()
    client.Send(data)

---

(document
  (text_line)
  (code_block))

==================
Indented variable declaration (4 spaces) - code example
==================

Example with variable:

    var x = 10

---

(document
  (text_line)
  (code_block))

==================
Indented constant declaration (8 spaces) - code example
==================

Example with constant:

        const Pi = 3.14159

---

(document
  (text_line)
  (code_block))

==================
Indented function signature (4 spaces) - code example
==================

Example function:

    func Example() string

---

(document
  (text_line)
  (code_block))

==================
Indented function block (4 spaces) - code example
==================

Example with implementation:

    func Calculate(x int) int {
        return x * 2
    }

---

(document
  (text_line)
  (code_block))

==================
Indented type struct block (8 spaces) - code example
==================

Example type definition:

        type Point struct {
            X int
            Y int
        }

---

(document
  (text_line)
  (code_block))

==================
Indented var block (4 spaces) - code example
==================

Example with multiple variables:

    var (
        count int
        name string
    )

---

(document
  (text_line)
  (code_block))

==================
Indented const block (8 spaces) - code example
==================

Example with multiple constants:

        const (
            MaxRetries = 3
            Timeout = 30
        )

---

(document
  (text_line)
  (code_block))

==================
Code block with single-space indentation
==================

Example usage:

 x := 10
 fmt.Println(x)

---

(document
  (text_line)
  (code_block))

==================
Code block with blank lines
==================

Here's an example:

 x := 10

 y := 20
 fmt.Println(x + y)

---

(document
  (text_line)
  (code_block))

==================
Code block with closing brace heuristic
==================

JSON example:

 {
     "key": "value"
 }

---

(document
  (text_line)
  (code_block))

==================
List marker (currently parsed as code block)
==================

Shopping list:

 - eggs
 - milk
 - bread

---

(document
  (text_line)
  (list_item)
  (list_item)
  (list_item))

==================
Numbered list (currently parsed as code block)
==================

Steps:

 1. First step
 2. Second step

---

(document
  (text_line)
  (list_item)
  (list_item))

==================
Code block from zlib example (go doc output)
==================

For example, to write compressed data to a buffer:

 var b bytes.Buffer
 w := zlib.NewWriter(&b)
 w.Write([]byte("hello, world\n"))
 w.Close()

---

(document
  (text_line)
  (code_block))

==================
Multi-line code block with function
==================

Example function:

 func Calculate(x, y int) int {
     result := x + y
     return result
 }

---

(document
  (text_line)
  (code_block))
